# t3-emiliopedrollo

./: CMakeLists.txt  Entrega.md  OpenMPDemoABC.cpp
